--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
   "name": "drawing-selector",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^3.0.1",
+    "@fortawesome/free-brands-svg-icons":"^6.5.2",
     "bootstrap": "^5.1.3",
-    "pinia": "^2.0.14",
-    "vue": "^3.2.36",
-    "vue-router": "^4.0.15"
+    "pinia": "^2.1.7",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue": "^3.4.27",
+    "vue-router": "^4.3.3",
+    "vuetify": "^3.6.9"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.9"
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
+    "@fortawesome/free-regular-svg-icons": "^6.5.2",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "vite": "^5.3.0"
   }
 }
